force-app/main/default/objects/Conditions_Admission_Mapping__mdt/Conditions_Admission_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Conditions Admission Mapping</label>
    <pluralLabel>Conditions Admission Mappings</pluralLabel>
</CustomObject>