force-app/main/default/objects/Conditions_Admission_Mapping__mdt/fields/Boolean_Logic__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Logic__c</fullName>
    <defaultValue>&quot;AND&quot;</defaultValue>
    <inlineHelpText>Boolean operation to while evaluating Condition Admission Criteria</inlineHelpText>
    <label>Boolean Logic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>