force-app/main/default/objects/Conditions_Admission_Mapping__mdt/fields/Child_Criteria_Reducer__c.field-meta.xml
<CustomField>
    <fullName>Child_Criteria_Reducer__c</fullName>
    <defaultValue>&apos;ANY&apos;</defaultValue>
    <label>Child Criteria Reducer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANY</fullName>
                <default>true</default>
                <label>ANY</label>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>