force-app/main/default/objects/Conditions_Admission_Mapping__mdt/fields/Field_To_Update_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Update_Api_Name__c</fullName>
    <defaultValue>&quot;System_Logic__c&quot;</defaultValue>
    <inlineHelpText>The field Api Name of the System Logic Field on the Tasks Object</inlineHelpText>
    <label>Field To Update Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>