force-app/main/default/objects/Conditions_Admission_Mapping__mdt/fields/Field_Truthy_Update_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Truthy_Update_Value__c</fullName>
    <defaultValue>&quot;Admitted&quot;</defaultValue>
    <inlineHelpText>The value the Field To Update Api Name field must be assigned if the child criteria are evaluated to true</inlineHelpText>
    <label>Field Truthy Update Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>