force-app/main/default/objects/Conditions_Admission_Mapping__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <inlineHelpText>The Object on which the fields added to the child Condition Admission Criteria are present on</inlineHelpText>
    <label>Object Api Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CJA_Mortgage__Mortgage__c</fullName>
                <default>true</default>
                <label>CJA_Mortgage__Mortgage__c</label>
            </value>
            <value>
                <fullName>LoanApplicantIncome</fullName>
            </value>
            <value>
                <fullName>LoanApplicationEmployment</fullName>
            </value>
            <value>
                <fullName>LoanApplicationProperty</fullName>
            </value>
            <value>
                <fullName>ResidentialLoanApplication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>