force-app/main/default/objects/Conditions_Admission_Mapping__mdt/fields/RLA_Relationship_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>RLA_Relationship_Field_Api_Name__c</fullName>
    <inlineHelpText>The Field API Name of the field on the object present in Object_Api_Name which contains the ID of the Residential Loan Application</inlineHelpText>
    <label>RLA Relationship Field Api Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>